@@ -1,3 +1,6 @@
+- library:
+  o create urpm::select::conflicting_packages_msg() for rpmdrake
+
 Version 6.10 - 9 September 2008, Thierry Vignaud
 
 - library:
